ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    #  kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: common-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:369350049400:certificate/03c05309-c7a6-4a73-86af-84b21e70c6cd
    alb.ingress.kubernetes.io/subnets: subnet-06b3edb1f35ba537b,subnet-08409d1a1ca77ffaf
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app-service
            port:
              number: 80
